# win32_pipes

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: wheels.yml
src/cpp/: Pipe.cpp  Pipe.h  PipeClient.cpp  PipeClient.h  PipeConnection.cpp  PipeConnection.h  PipeListener.cpp  PipeListener.h  module.cpp  util.cpp  util.h
src/win32_pipes/: __init__.py  _ext.pyi
src/win_pipes/: __init__.py  _ext.pyi
tests/: test_pipes.py
