[build-system]
requires = ["scikit-build-core>=0.8.2"]
build-backend = "scikit_build_core.build"

[project]
name = "win_pipes"
version = "0.0.1"
description="A non-blocking C++ NamedPipe implementation for Windows."
readme = "README.md"
authors = [
  { name = "Artur Drogunow", email = "Artur.Drogunow@zf.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "tox",
  "pre-commit",
  "pipx",
  "ruff",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest --no-header -vv {project}/tests"
build-frontend = "build"
skip = "pp*"

[tool.pytest.ini_options]
addopts = "--no-header -vv -rP"
testpaths = ["tests"]
